--- a/vTM-cluster-existing-VPC.template
+++ b/vTM-cluster-existing-VPC.template
@@ -136,13 +136,14 @@
       "MinLength"   : "6",
       "MaxLength"   : "32",
       "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
-      "NoEcho"         : "true"
+      "Default": "Qwerty123456**"
     },
 
     "EnvSGs": {
       "Description": "Comma-delimited list of additional security groups vTMs should belong to.",
       "Type": "CommaDelimitedList",
-      "ConstraintDescription": "must be a list of EC2 security group ids"
+      "ConstraintDescription": "must be a list of EC2 security group ids",
+      "Default": "sg-a9409dd4,sg-19409d64"
     },
 
     "RemoteAccessCIDR": {
@@ -151,35 +152,32 @@
       "MinLength": "9",
       "MaxLength": "18",
       "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
-      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
+      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x.",
+      "Default": "0.0.0.0/0"
     },
 
     "VPC": {
       "Description": "VPC to deploy into.",
-      "Type": "AWS::EC2::VPC::Id",
+      "Type": "String",
       "AllowedPattern": "^vpc-[0-9a-z]{8}",
-      "ConstraintDescription": "VPC ID must be specified."
+      "ConstraintDescription": "VPC ID must be specified.",
+      "Default": "vpc-a225c2c4"
     },
 
     "VPCCIDR": {
       "Description": "This is the IP block of the selected VPC; used for vTMs' Security Group.",
       "Type": "String",
       "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
-      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
+      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x.",
+      "Default": "0.0.0.0/0"
     },
 
     "PublicSubnet1": {
       "Description": "Public Subnet 1 from an existing VPC.",
       "Type": "AWS::EC2::Subnet::Id",
       "AllowedPattern": "^subnet-[0-9a-z]{8}",
-      "ConstraintDescription": "Subnet must be specified."
-    },
-
-    "PublicSubnet2": {
-      "Description": "Public Subnet 2 from an existing VPC. Can be the same as the Public Subnet 1.",
-      "Type": "AWS::EC2::Subnet::Id",
-      "AllowedPattern": "^subnet-[0-9a-z]{8}",
-      "ConstraintDescription": "Subnet must be specified."
+      "ConstraintDescription": "Subnet must be specified.",
+      "Default": "subnet-9bd563b6"
     }
 
   },
@@ -198,7 +196,7 @@
       "ap-southeast-1" : { "172r2" : "ami-ed6f4491", "173" : "ami-1abb3179", "174" : "ami-7e077c1d", "181" : "ami-136b406f" },
       "ap-southeast-2" : { "172r2" : "ami-31fb2f53", "173" : "ami-a1ccdec2", "174" : "ami-311dff53", "181" : "ami-8ff92ded" },
       "eu-central-1" : { "172r2" : "ami-3bc9e9d0", "173" : "ami-d66fcfb9", "174" : "ami-1577c87a", "181" : "ami-a0c7e74b" },
-      "us-east-1" : { "172r2" : "ami-e9813a96", "173" : "ami-268c8930", "174" : "ami-cdea22b7", "181" : "ami-5b8b3024", "110": "ami-fe07c493" },
+      "us-east-1" : { "172r2" : "ami-e9813a96", "173" : "ami-268c8930", "174" : "ami-cdea22b7", "181" : "ami-5b8b3024", "110": "ami-0e05c663" },
       "us-east-2" : { "172r2" : "ami-02ad9f67", "173" : "ami-d4e2c3b1", "174" : "ami-1e765a7b", "181" : "ami-4eac9e2b" },
       "us-west-1" : { "172r2" : "ami-ad706fcd", "173" : "ami-6be4cb0b", "174" : "ami-70467410", "181" : "ami-5f716e3f" },
       "us-west-2" : { "172r2" : "ami-f5493d8d", "173" : "ami-5e2b3827", "174" : "ami-7430f60c", "181" : "ami-a74d39df" }
@@ -324,73 +322,6 @@
       }
     },
 
-    "vTMIAMRole": {
-      "Type": "AWS::IAM::Role",
-      "Properties": {
-        "AssumeRolePolicyDocument": {
-          "Version" : "2012-10-17",
-          "Statement": [
-            {
-              "Effect": "Allow",
-              "Principal": {
-                "Service": [ "ec2.amazonaws.com" ]
-              },
-              "Action": [ "sts:AssumeRole" ]
-            }
-          ]
-        },
-        "Path": "/",
-        "Policies": [
-          {
-            "PolicyName": "vTMIAMPolicy",
-            "PolicyDocument": {
-              "Version" : "2012-10-17",
-              "Statement": [
-                {
-                  "Effect": "Allow",
-                  "Action": [
-                    "ec2:DescribeRegions",
-                    "ec2:DescribeInstances",
-                    "ec2:DescribeAddresses",
-                    "ec2:DescribeNetworkInterfaces",
-                    "ec2:AssociateAddress",
-                    "ec2:DisassociateAddress",
-                    "ec2:AllocateAddress",
-                    "ec2:ReleaseAddress",
-                    "ec2:AssignPrivateIPAddresses",
-                    "ec2:UnAssignPrivateIpAddresses"
-                  ],
-                  "Resource": "*"
-                },
-                {
-                  "Effect": "Allow",
-                  "Action": [
-                    "ec2:RunInstances",
-                    "ec2:TerminateInstances",
-                    "ec2:CreateTags",
-                    "ec2:DeleteTags"
-                  ],
-                  "Resource": "arn:aws:ec2:*"
-                }
-              ]
-            }
-          }
-        ]
-      }
-    },
-
-    "vTMInstanceIAMProfile": {
-      "Type": "AWS::IAM::InstanceProfile",
-      "Properties": {
-        "Path": "/",
-        "Roles": [
-          {
-            "Ref": "vTMIAMRole"
-          }
-        ]
-      }
-    },
-
     "vTMGroup": {
       "Type": "AWS::AutoScaling::AutoScalingGroup",
       "Properties": {
@@ -414,8 +345,7 @@
         "MaxSize": "6",
         "DesiredCapacity": { "Ref": "vTMQty" },
         "VPCZoneIdentifier": [
-          { "Ref": "PublicSubnet1" },
-          { "Ref": "PublicSubnet2" }
+          { "Ref": "PublicSubnet1" }
         ]
       }
     },
@@ -431,7 +361,7 @@
           "CreateFiles" : {
             "files" : {
               "/tmp/autocluster.sh" : {
-                "source": "https://raw.githubusercontent.com/dkalintsev/Pulse-vTM-CloudFormation/v1.1.3/Scripts/autocluster.sh",
+                "source": "https://raw.githubusercontent.com/gfliker-emx/bootstrap-repo/master/autocluster.sh",
                 "context": {
                   "ClusterID": { "Fn::Join": [ "-", [
                     { "Ref": "AWS::StackName" },
@@ -443,7 +373,7 @@
                 "owner": "root"
               },
               "/tmp/housekeeper.sh" : {
-                "source": "https://raw.githubusercontent.com/dkalintsev/Pulse-vTM-CloudFormation/v1.1.3/Scripts/housekeeper.sh",
+                "source": "https://raw.githubusercontent.com/gfliker-emx/bootstrap-repo/master/housekeeper.sh",
                 "context": {
                   "ClusterID": { "Fn::Join": [ "-", [
                     { "Ref": "AWS::StackName" },
@@ -457,6 +387,7 @@
               "/tmp/setup_stuff.sh" : {
                 "content": { "Fn::Join": [ "", [
                   "#!/bin/bash -x\n",
+                  "echo 'developer_mode_accepted   yes' >> /opt/zeus/zxtm/global.cfg\n",
                   "echo 'rest!enabled   Yes' >> /opt/zeus/zxtm/conf/settings.cfg\n",
                   "sed -i -e '/flipper.autofailback/d' /opt/zeus/zxtm/conf/settings.cfg\n",
                   "echo 'flipper!autofailback   Yes' >> /opt/zeus/zxtm/conf/settings.cfg\n",
@@ -517,7 +448,7 @@
       },
 
       "Properties": {
-        "IamInstanceProfile": { "Ref": "vTMInstanceIAMProfile"},
+        "IamInstanceProfile": "ec2-s3-brtpublic",
         "InstanceType": {
           "Ref": "InstanceType"
         },
